--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,9 @@ captures/
 *.iml
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/modules.xml
 .idea/gradle.xml
+.idea/navEditor.xml
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
